--- a/CourseProj/CourseProj.vcxproj
+++ b/CourseProj/CourseProj.vcxproj
@@ -141,6 +141,12 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BoundValProblem.h" />
+    <ClInclude Include="Matrix.h" />
+    <ClInclude Include="SLAE.h" />
+    <ClInclude Include="Vector.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
