--- a/CourseProj/CourseProj.vcxproj.filters
+++ b/CourseProj/CourseProj.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="BoundValProblem.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Test.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
